--- a/src/app/components/angularUiTree/tree.html
+++ b/src/app/components/angularUiTree/tree.html
@@ -12,22 +12,22 @@
 		            Selected: <b>{{ vm.selected.item }}</b>
 		        </div>
 		        <div class="modal-footer">
-		            <button class="btn btn-primary" type="button" ng-click="vm.ok()">OK</button>
-		            <button class="btn btn-warning" type="button" ng-click="vm.cancel()">Cancel</button>
+		            <button class="btn btn-primary angular-ui-tree-btn" type="button" ng-click="vm.ok()">OK</button>
+		            <button class="btn btn-warning angular-ui-tree-btn" type="button" ng-click="vm.cancel()">Cancel</button>
 		        </div>
 		    </script>
 <script type="text/ng-template" id="nodes_renderer.html">
 				  <div ui-tree-handle class="tree-node tree-node-content">
-				    <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="vm.toggle(this)"><span
+				    <a class="btn btn-success btn-xs angular-ui-tree-btn" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="vm.toggle(this)"><span
 				        class="glyphicon"
 				        ng-class="{
 				          'glyphicon-chevron-right': collapsed,
 				          'glyphicon-chevron-down': !collapsed
 				        }"></span></a>
 				    {{node.title}}
-				    <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="vm.remove(this)"><span
+				    <a class="pull-right btn btn-danger btn-xs angular-ui-tree-btn" data-nodrag ng-click="vm.remove(this)"><span
 				        class="glyphicon glyphicon-remove"></span></a>
-				    <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="vm.open()" style="margin-right: 8px;"><span
+				    <a class="pull-right btn btn-primary btn-xs angular-ui-tree-btn" data-nodrag ng-click="vm.open()" style="margin-right: 8px;"><span
 				        class="glyphicon glyphicon-plus"></span></a>
 				  </div>
 				  <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
