--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -28,6 +28,7 @@
                     <tree tree='vm.navtree1'></tree>
                 </li>
                 <li data-template-url="app/commons/navTree.html" data-placement="right" data-animation="am-slide-right" bs-aside="vm.aside" data-container="body"><a href="#" style="cursor:pointer">菜单</a></li>
+                <li ><a ui-sref="home.eomsindex">首页</a></li>
             </ul>
             <ul class="nav navbar-nav">
                 <li uib-dropdown >
@@ -100,7 +101,7 @@
       <br>
       <br>
     </div>
-    -->
+    
   </div>
-
+-->
    </div>
