--- a/src/app/components/password/styles.scss
+++ b/src/app/components/password/styles.scss
@@ -1,5 +1,5 @@
 
-.panel {
+/*.panel {
   border-color: #cfd9D7;
   border-radius: 2px;
   box-shadow: 0 8px 17px rgba(0, 0, 0, .2);
@@ -156,11 +156,11 @@
 .btn .fa {
   margin-right: 5px;
 }
-
+*/
 /*********************
 * Social Buttons
 *********************/
-
+/*
 .btn-google-plus {
   color: #fff;
   background-color: #dd4b39;
@@ -287,11 +287,11 @@
   color: #fff;
   background-color: #0d2c4a;
 }
-
+*/
 /*********************
 * Animations
 *********************/
-
+/*
 .fadeZoom.ng-enter {
   -webkit-animation-duration: 0.6s, 0.2s;
   -moz-animation-duration: 0.2s, 0.2s;
@@ -347,4 +347,4 @@
   50% {
     opacity: 1;
   }
-}
+}*/
