--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -5,7 +5,7 @@
         <h2 class="text-center">Log in</h2>
         <form method="post" ng-submit="vm.login()" name="loginForm">
           <div class="form-group has-feedback">
-            <input class="form-control input-lg" type="text" name="email" ng-model="vm.user.email" placeholder="Email" required autofocus>
+            <input class="form-control input-lg" type="text" name="userid" ng-model="vm.user.userid" placeholder="Email" required autofocus>
             <span class="ion-at form-control-feedback"></span>
           </div>
           <div class="form-group has-feedback">
@@ -14,14 +14,16 @@
           </div>
           <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success">Log in</button>
           <br/>
+          <!--
           <p class="text-center text-muted">
             <small>Don't have an account yet? <a href="/#/signup">Sign up</a></small>
           </p>
           <div class="signup-or-separator">
             <h6 class="text">or</h6>
             <hr>
-          </div>
+          </div>-->
         </form>
+        <!--
         <button class="btn btn-block btn-facebook" ng-click="vm.authenticate('facebook')">
           <i class="ion-social-facebook"></i> Sign in with Facebook
         </button>
@@ -55,6 +57,7 @@
         <button class="btn btn-block btn-twitch" ng-click="vm.authenticate('twitch')">
           <i class="ion-social-twitch"></i> Sign in with Twitch
         </button>
+        -->
       </div>
     </div>
   </div>
