--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -16,11 +16,10 @@ html,body{
   // height:100%;  
   // margin:0px;
   // padding: 0px;
-}   
+} 
+//导航菜单固定顶部的时候
 body { padding-top: 70px; }
-.indexDiv{
-	// height: 100%;
-}
+
 //去掉所有蓝色边框
 *{
     outline:none;
