--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -12,7 +12,7 @@
             <input class="form-control input-lg" type="password" name="password" ng-model="vm.user.password" placeholder="Password" required>
             <span class="ion-key form-control-feedback"></span>
           </div>
-          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success">Log in</button>
+          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success">登录</button>
           <br/>
           <!--
           <p class="text-center text-muted">
