--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,107 +1,43 @@
 
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" ng-init="navCollapsed = true"
-                    ng-click="navCollapsed = !navCollapsed">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" ui-sref="＃">EOMS</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" ng-class="!navCollapsed && 'in'">
-
-            <ul class="nav navbar-nav">
-                <li uib-dropdown>
-                    <a href="#" uib-dropdown-toggle>
-                        工单中心 <b class='caret'></b>
-                    </a>
-                    <tree tree='vm.navtree'></tree>
-                </li>
-                <li uib-dropdown>
-                    <a href="#" uib-dropdown-toggle>
-                        作业计划
-                        <span class='caret'></span>
-                    </a>
-                    <tree tree='vm.navtree1'></tree>
-                </li>
-                <li data-template-url="app/commons/navTree.html" data-placement="right" data-animation="am-slide-right" bs-aside="vm.aside" data-container="body"><a href="#" style="cursor:pointer">菜单</a></li>
-                <li ><a ui-sref="home.eomsindex">首页</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li uib-dropdown >
-                    <a href="#" uib-dropdown-toggle>
-                        用户名
-                        <span class='caret'></span>
-                    </a>
-                    <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
-                        <div style="margin:10px;width: 500px">
-                            <ul style="float:left;padding-left: 10px" class="list-unstyled">
-                                <li>菜单方案1</li>
-                                <li role="separator" class="divider"></li>
-                                <li>aaaa</li>
-                                <li>aaaa</li>
-                                <li>aaaa</li>
-                                <li>aaaa</li>
-                                <li>aaaa</li>
-                                 <li>aaaa</li>
-                                <li>aaaa</li>
-                                <li>aaaa</li>
-                                <li>aaaa</li>
-                                 <li>aaaa</li>
-                                <li>aaaa</li>
-                                <li>aaaa</li>
-                                <li>aaaa</li>
-                            </ul>
-                            <ul style="float:left;padding-left: 20px" class="list-unstyled">
-                                <li>菜单方案2</li>
-                                <li role="separator" class="divider"></li>
-                                <li>bbbb</li>
-                                <li>bbbb</li>
-                            </ul>
-                             <ul style="float:left;padding-left: 20px" class="list-unstyled">
-                                <li>菜单</li>
-                                <li role="separator" class="divider"></li>
-                                <li>bbbb</li>
-                                <li>bbbb</li>
-                            </ul>
-                        </div>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li uib-dropdown>
-                    <a href="#" uib-dropdown-toggle>
-                        切换屏幕
-                        <span class='caret'></span>
-                    </a>
-                    <tree tree='vm.navtree2'></tree>
-                </li>
-                <li>&nbsp;&nbsp;</li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse --> 
-    </nav>
-   <div class="inToOut_Animation" ui-view>
-   <!--
-   <div ng-controller="MessengerController as messengerCtrl">
-    <h2>WebSocket Test</h2>
-    Connection: {{ messengerCtrl.Messages.status() }}
-    <form ng-submit="messengerCtrl.submit(new_message)">
-      <input type="text" ng-model="messengerCtrl.username">
-      <input type="text" ng-model="new_message" autofocus required>
-      <button type="submit">Send Message</button>
-    </form>
-    <div ng-repeat="message in messengerCtrl.Messages.collection | orderBy:'-timeStamp' track by $index">
-      <b>{{ message.username | capitalize }}</b>: <small>{{ message.timeStamp | date:'medium' }}</small>
-      <br>
-        {{ message.content }}
-      <br>
-      <br>
-    </div>
-    
+<nav class="navbar home_navbar navbar-fixed-top" role="navigation">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" 
+                    ng-click="vm.isCollapsed = !vm.isCollapsed">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand home_a" ui-sref="＃">电子运行维护平台</a>
   </div>
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div  class="collapse navbar-collapse" uib-collapse="!vm.isCollapsed"  resize>
+    <ul class="nav navbar-nav home_nav ">
+      <li  ng-class="{active:$index==vm.activerow}"  ng-click="vm.isCurrent($index,data.CODE)" ng-repeat="data in vm.menuList" on-finish-render-filters>
+        <a href="#" style="cursor:pointer">{{data.NAME}}</a>
+      </li>
+    </ul>
+  </div>
+  <!-- /.navbar-collapse -->
+</nav>
+<div class="inToOut_Animation" ui-view>
+  <!--
+   <div ng-controller="MessengerController as messengerCtrl">
+  <h2>WebSocket Test</h2>
+  Connection: {{ messengerCtrl.Messages.status() }}
+  <form ng-submit="messengerCtrl.submit(new_message)">
+    <input type="text" ng-model="messengerCtrl.username">
+    <input type="text" ng-model="new_message" autofocus required>
+    <button type="submit">Send Message</button>
+  </form>
+  <div ng-repeat="message in messengerCtrl.Messages.collection | orderBy:'-timeStamp' track by $index"> <b>{{ message.username | capitalize }}</b>
+    :
+    <small>{{ message.timeStamp | date:'medium' }}</small>
+    <br>
+    {{ message.content }}
+    <br>
+    <br></div>
+
+</div>
 -->
-   </div>
+</div>
