--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -6,6 +6,14 @@ li:hover >.dropdown-menu {
   display: block;
 }
 /**
+ * 
+ */
+.home_div{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+/**
  * 去掉bootstrap默认的 导航菜单的悬浮
  * 
  */
