--- a/src/app/components/eomsChooser/selectTree.template.html
+++ b/src/app/components/eomsChooser/selectTree.template.html
@@ -1,12 +1,16 @@
-<div ivh-treeview="vm.selectTree" eoms-ivh-tree-control="vm.eomsIvhTreeControl">
+<div ivh-treeview="vm[obj.id+'TreeData']" ivh-treeview-expand-to-depth="1" eoms-ivh-tree-control="vm[obj.id+'TreeControl']" ng-repeat="obj in vm.category">
   <script type="text/ng-template">
     <div title="{{trvw.label(node)}}">
-      <span ivh-treeview-toggle>
+     <!-- urlClass 对应后台spring Controller的路径 urlMethod 对应后台spring  Controller类中的方法路径 -->
+      <span ivh-treeview-toggle urlClass="treeController" urlMethod="deptTree">
         <span ivh-treeview-twistie></span>
       </span>
+      <span ivh-treeview-eoms-icon></span><!--ivh-treeview-eoms-icon 指令 是 添加区分部门和用户的图标-->
       <span ng-if="trvw.useCheckboxes()" ivh-treeview-checkbox></span>
-      <span class="ivh-treeview-node-label" ivh-treeview-eoms-select>{{trvw.label(node)}}</span>
+      <span class="ivh-treeview-node-label">{{trvw.label(node)}}</span>
+       <span ng-click="kill(node)" ivh-treeview-eoms-remove></span><!--ivh-treeview-eoms-remove 指令是删除节点的图标  -->
       <div ivh-treeview-children></div>
     </div>
   </script>
 </div>
+
