改了好多呀，忘记了

--- a/src/app/components/eomsChooser/eomsChooser.html
+++ b/src/app/components/eomsChooser/eomsChooser.html
@@ -33,7 +33,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="$hide()">关闭</button>
-        <button type="button" class="btn btn-primary" ng-click="$hide()">保存</button>
+        <button type="button" class="btn btn-primary" ng-click="vm.save();$hide()">保存</button>
       </div>
     </div>
   </div>
