--- a/src/app/eomsindex/eomsindex.html
+++ b/src/app/eomsindex/eomsindex.html
@@ -9,4 +9,5 @@
 					<td title="'内容'" filter="{ content: 'text'}" sortable="'content'">{{user.content}}</td>
 				</tr>
 	</table>
+	<button type="button" ng-click="vm.ceshi()">测试</button>
 </div>
